[package]
name = "proxyrs"
version = "0.1.0"
authors = ["Sgeo <sgeoster@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
libloading = "0.6"
tempfile = "3.2.0"


[lib]
crate-type = ["cdylib"]